# python-project-49

./: .gitignore  Makefile  README.md  brain_games.py  demo.cast  pyproject.toml
brain_games/: cli.py  engine.py
brain_games/games/: calc.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
